# IoT_IMD0292

./: .gitignore  README.md
AplicativoComMQTT/: apkMqtt
IoT_React_Location_Tracker/: package.json
IoT_React_Location_Tracker/public/: index.html
IoT_React_Location_Tracker/src/: App.css  App.js  index.js
docker/: compose.yml
flutter_application_localizacao/: README.md  pubspec.yaml
flutter_application_localizacao/android/app/: build.gradle
flutter_application_localizacao/ios/Runner/: Info.plist
flutter_application_localizacao/ios/Runner.xcodeproj/: project.pbxproj
flutter_application_localizacao/lib/: main.dart
flutter_application_localizacao/linux/: CMakeLists.txt
flutter_application_localizacao/linux/runner/: my_application.cc
flutter_application_localizacao/macos/Runner.xcodeproj/: project.pbxproj
flutter_application_localizacao/test/: widget_test.dart
flutter_application_localizacao/web/: index.html  manifest.json
flutter_application_localizacao/windows/: CMakeLists.txt
flutter_application_localizacao/windows/runner/: Runner.rc  (+1 more)
painel/: .env  .gitignore  Cargo.toml
painel/custom_gtfs/: agency.txt  calendar.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  trips.txt
painel/services/travelmux/src/api/v4/: error.rs
painel/src/: app.rs  entry.rs  main.rs
painel/src/app/: painel.rs
painel/src/app/painel/: global.rs
painel/src/app/painel/gui/map/: acknowledge.rs  controls.rs
painel/src/app/painel/plugins/: custom_shapes.rs  image_data.rs  places.rs
painel/src/app/painel/types/: provider.rs
painel/src/entry/: nonwasm.rs
(+4 files in other folders)
